--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1615,7 +1615,7 @@ jobs:
           rm -f .env
 
   linux_zip:
-    name: Create zip
+    name: Create linux zip
     runs-on: ubuntu-latest
     needs:
       - create_release
@@ -1686,7 +1686,7 @@ jobs:
           rm -f .env
 
   linux_zip_aarch64:
-    name: Create zip (aarch64)
+    name: Create linux zip (aarch64)
     runs-on: ubuntu-latest
     needs:
       - create_release
@@ -1790,7 +1790,7 @@ jobs:
           rm -f .env
 
   linux_tar:
-    name: Create tar
+    name: Create linux tar
     runs-on: ubuntu-latest
     needs:
       - create_release
@@ -1863,7 +1863,7 @@ jobs:
           rm -f .env
 
   linux_tar_aarch64:
-    name: Create tar (aarch64)
+    name: Create linux tar (aarch64)
     runs-on: ubuntu-latest
     needs:
       - create_release
@@ -2052,7 +2052,7 @@ jobs:
           GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
 
   linux_flatpak_aarch64:
-    name: Create flatpak
+    name: Create flatpak (aarch64)
     runs-on: ubuntu-latest
     container:
       image: bilelmoussaoui/flatpak-github-actions:freedesktop-22.08
