ci: Update job name
[skip ci]

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -462,7 +462,7 @@ jobs:
           rm -f .env
 
   macos_dmg:
-    name: Create macos(dmg)
+    name: Create macos dmg
     runs-on: macos-latest
     needs:
       - create_release
@@ -607,7 +607,7 @@ jobs:
 
 
   macos_pkg:
-    name: Create macos(pkg)
+    name: Create macos pkg
     runs-on: macos-latest
     needs:
       - create_release
@@ -745,7 +745,7 @@ jobs:
 
 
   macos_appstore:
-    name: Create macos(appstore)
+    name: Create macos pkg (appstore)
     runs-on: macos-latest
     needs:
       - create_release
@@ -1166,7 +1166,7 @@ jobs:
 
 
   linux_appimage:
-    name: Create AppImage
+    name: Create linux AppImage
     runs-on: ubuntu-latest
     needs:
       - create_release
@@ -1239,7 +1239,7 @@ jobs:
           rm -f .env
 
   linux_deb:
-    name: Create deb
+    name: Create linux deb
     runs-on: ubuntu-latest
     needs:
       - create_release
@@ -1310,7 +1310,7 @@ jobs:
           rm -f .env
 
   linux_deb_aarch64:
-    name: Create deb (aarch64)
+    name: Create linux deb (aarch64)
     runs-on: ubuntu-latest
     needs:
       - create_release
@@ -1413,7 +1413,7 @@ jobs:
           rm -f .env
 
   linux_rpm:
-    name: Create rpm
+    name: Create linux rpm
     runs-on: ubuntu-latest
     needs:
       - create_release
@@ -1488,7 +1488,7 @@ jobs:
           rm -f .env
 
   linux_rpm_aarch64:
-    name: Create rpm (aarch64)
+    name: Create linux rpm (aarch64)
     runs-on: ubuntu-latest
     needs:
       - create_release
@@ -1968,7 +1968,7 @@ jobs:
 
 
   linux_flatpak:
-    name: Create flatpak
+    name: Create linux flatpak
     runs-on: ubuntu-latest
     container:
       image: bilelmoussaoui/flatpak-github-actions:freedesktop-22.08
@@ -2052,7 +2052,7 @@ jobs:
           GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
 
   linux_flatpak_aarch64:
-    name: Create flatpak (aarch64)
+    name: Create linux flatpak (aarch64)
     runs-on: ubuntu-latest
     container:
       image: bilelmoussaoui/flatpak-github-actions:freedesktop-22.08
@@ -2145,7 +2145,7 @@ jobs:
           GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
 
   linux_snap:
-    name: Create snap
+    name: Create linux snap
     runs-on: ubuntu-latest
     needs:
       - create_release
@@ -2235,7 +2235,7 @@ jobs:
           snapcraft clean
 
   windows_msix:
-    name: Create msix
+    name: Create windows msix
     runs-on: windows-latest
     needs:
       - create_release
@@ -2360,7 +2360,7 @@ jobs:
           }
 
   windows_exe:
-    name: Create exe
+    name: Create windows exe
     runs-on: windows-latest
     needs:
       - create_release
@@ -2494,7 +2494,7 @@ jobs:
           }
 
   windows_zip:
-    name: Create zip
+    name: Create windows zip
     runs-on: windows-latest
     needs:
       - create_release
