Add fvm support

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,12 @@ migrate_working_dir/
 .pub/
 /build/
 
+# Visual Studio Code related
+.classpath
+.project
+.settings/
+.vscode/*
+
 # Symbolication related
 app.*.symbols
 
@@ -42,6 +48,18 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
+# Exceptions to the above rules.
+!**/ios/**/default.mode1v3
+!**/ios/**/default.mode2v3
+!**/ios/**/default.pbxuser
+!**/ios/**/default.perspectivev3
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/tasks.json
+!.idea/codeStyles/
+!.idea/dictionaries/
+!.idea/runConfigurations/
+
 /node_modules
 /*.dmg
 /*.pkg
@@ -51,3 +69,6 @@ dist/
 # local env files
 .env*.local
 .env
+
+# FVM Version Cache
+.fvm/
