--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1238,6 +1238,127 @@ jobs:
         run: |
           rm -f .env
 
+  linux_appimage_aarch64:
+    name: Create linux AppImage (aarch64)
+    runs-on: ubuntu-latest
+    needs:
+      - create_release
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: all
+
+      - name: Show linux info
+        run: uname --all
+
+      - name: Configure .env
+        run: |
+          ENV_BASE64="$([[ "$ENV" == "staging" ]] && echo "$ENV_STG_BASE64" || echo "$ENV_PROD_BASE64")"
+          echo "$ENV_KEY" | base64 --decode > .env
+        env:
+          ENV: ${{ github.event.inputs.env }}
+          ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64 }}
+          ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64 }}
+
+      - name: Install qemu-user-static
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
+      # https://github.com/s3fs-fuse/s3fs-fuse/issues/647#issuecomment-637458150
+      - uses: addnab/docker-run-action@v3
+        with:
+          image: arm64v8/ubuntu:22.04
+          options: |
+            --rm
+            --cap-add SYS_ADMIN
+            --device /dev/fuse
+            --security-opt apparmor:unconfined
+            -v ${{ github.workspace }}:/work
+            --workdir /work
+            -e ENV=${{ github.event.inputs.env }}
+            -e VERSION=${{ needs.create_release.outputs.version }}
+            -e COMMIT_COUNT=${{ needs.create_release.outputs.commit_count }}
+          shell: bash
+          run: |
+            set -x
+            # Show linux info
+            echo "Show linux info"
+            uname --all
+
+            # Install dependencies for Linux
+            echo "Install dependencies for Linux"
+            apt update && apt install -y sudo
+            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
+            sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
+            sudo apt install -y locate libfuse2
+
+            # Install appimagetool
+            echo "Install appimagetool"
+            wget -O appimagetool "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-aarch64.AppImage"
+            # https://github.com/AppImage/AppImageKit/issues/1056#issuecomment-643382397
+            sed -i 's|AI\x02|\x00\x00\x00|' appimagetool
+            chmod +x appimagetool && mv appimagetool /usr/local/bin/
+            
+            # Setup Flutter
+            echo "Setup Flutter"
+            bash ./install-flutter-ubuntu.sh
+            
+            if [ -d "/home/linux-arm64/flutter" ]; then
+              echo "🟩 ls -la"
+              ls -la /home/linux-arm64/flutter
+            fi
+            echo 'export PATH="$PATH:/home/linux-arm64/flutter/bin:/home/linux-arm64/flutter/.pub-cache/bin:$HOME/.pub-cache/bin"' >> ~/.zshrc
+            source ~/.zshrc
+            echo $PATH
+            
+            # Install flutter_distributor
+            echo "Install flutter_distributor"
+            dart pub global activate --source git https://github.com/kjxbyz/flutter_distributor --git-ref appimage --git-path packages/flutter_distributor
+            
+            # Flutter doctor
+            echo "Flutter doctor -v"
+            flutter doctor -v
+            
+            # Install flutter dependencies
+            echo "Install flutter dependencies"
+            flutter pub get
+
+            RELEASE="$([[ "$ENV" == "staging" ]] && echo "$VERSION.pre" || echo "$VERSION")"
+
+            echo "RELEASE: $RELEASE"
+            
+            # Build AppImage
+            echo "Build AppImage"
+            flutter_distributor package --flutter-build-args "dart-define-from-file=.env,target-platform=linux-arm64,build-number=$COMMIT_COUNT" --platform linux --targets appimage --artifact-name {{name}}_"$RELEASE"_{{platform}}_aarch64.{{ext}}
+
+      # Package the build.
+      - name: Copy build for AppImage
+        run: |
+          ls -laR
+          cp ./**/*.AppImage $GITHUB_WORKSPACE/
+        working-directory: dist
+
+      - name: Show gh info
+        run: gh --version
+
+      - name: Upload assets
+        run: |
+          RELEASE="$([[ "$ENV" == "staging" ]] && echo "$TAG_NAME.pre" || echo "$TAG_NAME")"
+          gh release upload "$RELEASE" ./*.AppImage
+        env:
+          ENV: ${{ github.event.inputs.env }}
+          TAG_NAME: "v${{ needs.create_release.outputs.version }}"
+          GH_TOKEN: ${{ secrets.PG_RELEASE_TOKEN }}
+
+      - name: Clean up
+        if: ${{ always() }}
+        run: |
+          rm -f .env
+
+
   linux_deb:
     name: Create linux deb
     runs-on: ubuntu-latest
