--- a/.github/workflows/test-linux-arm64.yml
+++ b/.github/workflows/test-linux-arm64.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: arm64
+          platforms: all
 
       - name: Show linux info
         run: uname --all
@@ -27,11 +27,19 @@ jobs:
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
+      - name: Install qemu-user-static
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
+      # https://github.com/s3fs-fuse/s3fs-fuse/issues/647#issuecomment-637458150
       - uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/grimbough/bioc-with-tinytex:devel-arm64
+          image: arm64v8/ubuntu:22.04
           options: |
-            --platform linux/arm64
+            --rm
+            --cap-add SYS_ADMIN
+            --device /dev/fuse
+            --security-opt apparmor:unconfined
             -v ${{ github.workspace }}:/work
             --workdir /work
           shell: bash
@@ -43,10 +51,16 @@ jobs:
 
             # Install dependencies for Linux
             echo "Install dependencies for Linux"
-            sudo apt update
+            apt update && apt install -y sudo
+            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
             sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
             sudo apt install -y locate libfuse2
+
+            # Install appimagetool
+            echo "Install appimagetool"
             wget -O appimagetool "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-aarch64.AppImage"
+            # https://github.com/AppImage/AppImageKit/issues/1056#issuecomment-643382397
+            sed -i 's|AI\x02|\x00\x00\x00|' appimagetool
             chmod +x appimagetool && mv appimagetool /usr/local/bin/
             
             # Setup Flutter
@@ -63,7 +77,7 @@ jobs:
             
             # Install flutter_distributor
             echo "Install flutter_distributor"
-            dart pub global activate flutter_distributor
+            dart pub global activate --source git https://github.com/kjxbyz/flutter_distributor --git-ref appimage --git-path packages/flutter_distributor
             
             # Flutter doctor
             echo "Flutter doctor -v"
