--- a/.github/workflows/test-linux-snapcraft.yml
+++ b/.github/workflows/test-linux-snapcraft.yml
@@ -61,4 +61,7 @@ jobs:
         if: ${{ always() }}
         run: |
           rm -f .env
-          snapcraft clean
+          if which snapcraft >/dev/null 2>&1; then
+            echo "snapcraft exists"
+            snapcraft clean
+          fi
