--- a/.github/workflows/test-linux-snapcraft-arm64.yml
+++ b/.github/workflows/test-linux-snapcraft-arm64.yml
@@ -8,7 +8,7 @@ permissions: read-all
 
 jobs:
   snap_arm64:
-    name: Create snap(arm64)
+    name: Create snap
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -16,7 +16,7 @@ jobs:
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: arm64
+          platforms: all
 
       - name: Configure .env
         run: |
@@ -24,33 +24,51 @@ jobs:
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
+      - name: Install qemu-user-static
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+      # https://github.com/s3fs-fuse/s3fs-fuse/issues/647#issuecomment-637458150
       - uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/grimbough/bioc-with-tinytex:devel-arm64
+          image: arm64v8/ubuntu:22.04
           options: |
-            --platform linux/arm64
+            --rm
+            --cap-add SYS_ADMIN
+            --device /dev/fuse
+            --security-opt apparmor:unconfined
             -v ${{ github.workspace }}:/work
             --workdir /work
           shell: bash
           run: |
-            set -x
+            set -e
             # Show linux info
             echo "Show linux info"
             uname --all
+            ps -p 1 -o comm=
             
-            # Installing snap on Ubuntu
-            echo "Installing snap on Ubuntu"
-            sudo apt update
-            sudo apt install -y snapd
+            # Install dependencies for Linux
+            echo "Install dependencies for Linux"
+            apt update && apt install -y sudo
+            sudo apt install -y snapd wget curl git unzip xz-utils zip libglu1-mesa file
             # sudo apt install -y iptables
+
+            # Verify that the following tools are installed
+            echo "Verify that the following tools are installed"
+            which bash file mkdir rm which
             
-            sudo systemctl restart snapd snapd.socket
-            sudo systemctl unmask snapd.service
-            sudo systemctl enable snapd.service
-            sudo systemctl start snapd.service
+            # start snapd
+            sudo systemctl status snapd
+            # sudo systemctl unmask snapd
+            # sudo systemctl start snapd
+            # sudo systemctl enable snapd
+
+            # start snapd.socket
+            sudo systemctl status snapd.socket
+            # sudo systemctl start snapd.socket
+            # sudo systemctl enable snapd.socket
             
-            # sudo systemctl enable iptables.service
-            # sudo systemctl start iptables.service
+            # sudo systemctl enable iptables
+            # sudo systemctl start iptables
             
             export PATH=$PATH:/sbin
             export PATH=$PATH:/snap/bin
@@ -62,34 +80,31 @@ jobs:
             
             # Install/refresh LXD snap
             echo "Install/refresh LXD snap"
-            if snap list lxd; then
+            if snap info lxd | grep "installed"; then
               sudo snap refresh lxd --channel=latest/stable
             else
               sudo snap install lxd --channel=latest/stable
             fi
             
-            # Setup permissions for socket
-            echo "Setup permissions for socket"
-            while [ -n "$(snap changes lxd 2>/dev/null | awk '/^[0-9]+/ {if ($2 != "Done") print $2 }')" ]; do
-              echo "Waiting for snap changes on LXD to finish"
-              sleep 1
-            done
-            sudo snap set lxd daemon.group=lxd
-            
             # Initialise LXD
             echo "Initialise LXD"
             sudo lxd waitready
             sudo lxd init --auto
+
+            # Setup permissions for socket
+            echo "Setup permissions for socket"
+            sudo snap set lxd daemon.group=adm
+            sudo snap restart lxd
             
             # Configure firewall
-            # echo "Configure firewall"
-            # sudo iptables -I DOCKER-USER -i lxdbr0 -j ACCEPT
-            # sudo iptables -I DOCKER-USER -o lxdbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
+            echo "Configure firewall"
+            sudo iptables -I DOCKER-USER -i lxdbr0 -j ACCEPT
+            sudo iptables -I DOCKER-USER -o lxdbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
             
-            # Add user to the LXD (lxd) group
-            echo "Add user to the LXD (lxd) group"
-            sudo usermod -a -G lxd ${USER}
-            newgrp lxd
+            # Add user to the LXD (adm) group
+            echo "Add user to the LXD (adm) group"
+            sudo usermod -a -G adm ${USER}
+            newgrp adm
             
             # Check LXD status
             echo "Check LXD status"
@@ -107,15 +122,15 @@ jobs:
             # Install yq
             if ! command -v yq >/dev/null 2>&1; then
               echo "yq not exists"
-              sudo add-apt-repository ppa:rmescandon/yq
-              sudo apt update
-              sudo apt install -y yq
+              wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_arm64 -O /usr/bin/yq &&\
+              chmod +x /usr/bin/yq
             fi
             yq --version
             
             # Get version
             echo "Get version"
             version=$(yq '.version' pubspec.yaml)
+            echo "version: $version"
             
             # Build snap
             # https://snapcraft.io/docs/flutter-applications
@@ -136,4 +151,7 @@ jobs:
         if: ${{ always() }}
         run: |
           rm -f .env
-          snapcraft clean
+          if which snapcraft >/dev/null 2>&1; then
+            echo "snapcraft exists"
+            snapcraft clean
+          fi
