--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -605,7 +605,6 @@ jobs:
           fi
           rm -f .env
 
-
   macos_pkg:
     name: Create macos pkg
     runs-on: macos-latest
@@ -742,7 +741,6 @@ jobs:
             security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
           fi
           rm -f .env
-
 
   macos_appstore:
     name: Create macos pkg (appstore)
@@ -887,7 +885,6 @@ jobs:
             security delete-keychain $RUNNER_TEMP/pg-signing.keychain-db
           fi
           rm -f .env
-
 
   macos_zip:
     name: Create macos zip
@@ -1164,7 +1161,6 @@ jobs:
           fi
           rm -f .env
 
-
   linux_appimage:
     name: Create linux AppImage
     runs-on: ubuntu-latest
@@ -1250,9 +1246,6 @@ jobs:
         uses: docker/setup-qemu-action@v3
         with:
           platforms: all
-
-      - name: Show linux info
-        run: uname --all
 
       - name: Configure .env
         run: |
@@ -1358,7 +1351,6 @@ jobs:
         run: |
           rm -f .env
 
-
   linux_deb:
     name: Create linux deb
     runs-on: ubuntu-latest
@@ -1443,9 +1435,6 @@ jobs:
         with:
           platforms: arm64
 
-      - name: Show linux info
-        run: uname --all
-
       - name: Configure .env
         run: |
           ENV_BASE64="$([[ "$ENV" == "staging" ]] && echo "$ENV_STG_BASE64" || echo "$ENV_PROD_BASE64")"
@@ -1455,11 +1444,18 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64 }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64 }}
 
+      - name: Install qemu-user-static
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
       - uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/grimbough/bioc-with-tinytex:devel-arm64
+          image: arm64v8/ubuntu:22.04
           options: |
-            --platform linux/arm64
+            --rm
+            --cap-add SYS_ADMIN
+            --device /dev/fuse
+            --security-opt apparmor:unconfined
             -v ${{ github.workspace }}:/work
             --workdir /work
             -e ENV=${{ github.event.inputs.env }}
@@ -1474,7 +1470,8 @@ jobs:
 
             # Install dependencies for Linux
             echo "Install dependencies for Linux"
-            sudo apt update
+            apt update && apt install -y sudo
+            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
             sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
 
             # Setup Flutter
@@ -1621,9 +1618,6 @@ jobs:
         with:
           platforms: arm64
 
-      - name: Show linux info
-        run: uname --all
-
       - name: Configure .env
         run: |
           ENV_BASE64="$([[ "$ENV" == "staging" ]] && echo "$ENV_STG_BASE64" || echo "$ENV_PROD_BASE64")"
@@ -1633,11 +1627,18 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64 }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64 }}
 
+      - name: Install qemu-user-static
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
       - uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/grimbough/bioc-with-tinytex:devel-arm64
+          image: arm64v8/ubuntu:22.04
           options: |
-            --platform linux/arm64
+            --rm
+            --cap-add SYS_ADMIN
+            --device /dev/fuse
+            --security-opt apparmor:unconfined
             -v ${{ github.workspace }}:/work
             --workdir /work
             -e ENV=${{ github.event.inputs.env }}
@@ -1652,7 +1653,8 @@ jobs:
 
             # Install dependencies for Linux
             echo "Install dependencies for Linux"
-            sudo apt update
+            apt update && apt install -y sudo
+            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
             sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
             sudo apt install -y rpm patchelf
             
@@ -1819,9 +1821,6 @@ jobs:
         with:
           platforms: arm64
 
-      - name: Show linux info
-        run: uname --all
-
       - name: Configure .env
         run: |
           ENV_BASE64="$([[ "$ENV" == "staging" ]] && echo "$ENV_STG_BASE64" || echo "$ENV_PROD_BASE64")"
@@ -1831,11 +1830,18 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64 }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64 }}
 
+      - name: Install qemu-user-static
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
       - uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/grimbough/bioc-with-tinytex:devel-arm64
+          image: arm64v8/ubuntu:22.04
           options: |
-            --platform linux/arm64
+            --rm
+            --cap-add SYS_ADMIN
+            --device /dev/fuse
+            --security-opt apparmor:unconfined
             -v ${{ github.workspace }}:/work
             --workdir /work
             -e ENV=${{ github.event.inputs.env }}
@@ -1850,7 +1856,8 @@ jobs:
 
             # Install dependencies for Linux
             echo "Install dependencies for Linux"
-            sudo apt update
+            apt update && apt install -y sudo
+            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
             sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
             sudo apt install -y p7zip-full p7zip-rar
 
@@ -1996,9 +2003,6 @@ jobs:
         with:
           platforms: arm64
 
-      - name: Show linux info
-        run: uname --all
-
       - name: Configure .env
         run: |
           ENV_BASE64="$([[ "$ENV" == "staging" ]] && echo "$ENV_STG_BASE64" || echo "$ENV_PROD_BASE64")"
@@ -2008,11 +2012,18 @@ jobs:
           ENV_STG_BASE64: ${{ secrets.ENV_STG_BASE64 }}
           ENV_PROD_BASE64: ${{ secrets.ENV_PROD_BASE64 }}
 
+      - name: Install qemu-user-static
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
       - uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/grimbough/bioc-with-tinytex:devel-arm64
+          image: arm64v8/ubuntu:22.04
           options: |
-            --platform linux/arm64
+            --rm
+            --cap-add SYS_ADMIN
+            --device /dev/fuse
+            --security-opt apparmor:unconfined
             -v ${{ github.workspace }}:/work
             --workdir /work
             -e ENV=${{ github.event.inputs.env }}
@@ -2027,7 +2038,8 @@ jobs:
 
             # Install dependencies for Linux
             echo "Install dependencies for Linux"
-            sudo apt update
+            apt update && apt install -y sudo
+            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
             sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
             sudo apt install -y p7zip-full p7zip-rar
 
@@ -2086,7 +2098,6 @@ jobs:
         if: ${{ always() }}
         run: |
           rm -f .env
-
 
   linux_flatpak:
     name: Create linux flatpak
