--- a/.github/workflows/test-linux-arm64.yml
+++ b/.github/workflows/test-linux-arm64.yml
@@ -18,9 +18,6 @@ jobs:
         with:
           platforms: all
 
-      - name: Show linux info
-        run: uname --all
-
       - name: Configure .env
         run: |
           echo "$ENV_KEY" | base64 --decode > .env
@@ -118,20 +115,24 @@ jobs:
         with:
           platforms: arm64
 
-      - name: Show linux info
-        run: uname --all
-
       - name: Configure .env
         run: |
           echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
+      - name: Install qemu-user-static
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
       - uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/grimbough/bioc-with-tinytex:devel-arm64
+          image: arm64v8/ubuntu:22.04
           options: |
-            --platform linux/arm64
+            --rm
+            --cap-add SYS_ADMIN
+            --device /dev/fuse
+            --security-opt apparmor:unconfined
             -v ${{ github.workspace }}:/work
             --workdir /work
           shell: bash
@@ -143,7 +144,8 @@ jobs:
 
             # Install dependencies for Linux
             echo "Install dependencies for Linux"
-            sudo apt update
+            apt update && apt install -y sudo
+            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
             sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
 
             # Setup Flutter
@@ -202,20 +204,24 @@ jobs:
         with:
           platforms: arm64
 
-      - name: Show linux info
-        run: uname --all
-
       - name: Configure .env
         run: |
           echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
+      - name: Install qemu-user-static
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
       - uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/grimbough/bioc-with-tinytex:devel-arm64
+          image: arm64v8/ubuntu:22.04
           options: |
-            --platform linux/arm64
+            --rm
+            --cap-add SYS_ADMIN
+            --device /dev/fuse
+            --security-opt apparmor:unconfined
             -v ${{ github.workspace }}:/work
             --workdir /work
           shell: bash
@@ -227,7 +233,8 @@ jobs:
 
             # Install dependencies for Linux
             echo "Install dependencies for Linux"
-            sudo apt update
+            apt update && apt install -y sudo
+            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
             sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
             sudo apt install -y rpm patchelf
             
@@ -266,10 +273,6 @@ jobs:
             # Install yq
             if ! command -v yq >/dev/null 2>&1; then
               echo "yq not exists"
-              if ! command -v wget >/dev/null 2>&1; then
-                echo "wget not exists"
-                sudo apt install -y wget
-              fi
               wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_arm64 -O /usr/bin/yq &&\
               chmod +x /usr/bin/yq
             fi
@@ -311,20 +314,24 @@ jobs:
         with:
           platforms: arm64
 
-      - name: Show linux info
-        run: uname --all
-
       - name: Configure .env
         run: |
           echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
+      - name: Install qemu-user-static
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
       - uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/grimbough/bioc-with-tinytex:devel-arm64
+          image: arm64v8/ubuntu:22.04
           options: |
-            --platform linux/arm64
+            --rm
+            --cap-add SYS_ADMIN
+            --device /dev/fuse
+            --security-opt apparmor:unconfined
             -v ${{ github.workspace }}:/work
             --workdir /work
           shell: bash
@@ -336,7 +343,8 @@ jobs:
 
             # Install dependencies for Linux
             echo "Install dependencies for Linux"
-            sudo apt update
+            apt update && apt install -y sudo
+            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
             sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
             sudo apt install -y p7zip-full p7zip-rar
 
@@ -396,20 +404,24 @@ jobs:
         with:
           platforms: arm64
 
-      - name: Show linux info
-        run: uname --all
-
       - name: Configure .env
         run: |
           echo "$ENV_KEY" | base64 --decode > .env
         env:
           ENV_KEY: ${{ secrets.ENV_STG_BASE64 }}
 
+      - name: Install qemu-user-static
+        run: |
+          docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+
       - uses: addnab/docker-run-action@v3
         with:
-          image: ghcr.io/grimbough/bioc-with-tinytex:devel-arm64
+          image: arm64v8/ubuntu:22.04
           options: |
-            --platform linux/arm64
+            --rm
+            --cap-add SYS_ADMIN
+            --device /dev/fuse
+            --security-opt apparmor:unconfined
             -v ${{ github.workspace }}:/work
             --workdir /work
           shell: bash
@@ -421,7 +433,8 @@ jobs:
 
             # Install dependencies for Linux
             echo "Install dependencies for Linux"
-            sudo apt update
+            apt update && apt install -y sudo
+            sudo apt install -y wget curl git unzip xz-utils zip libglu1-mesa file
             sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
             sudo apt install -y p7zip-full p7zip-rar
 
@@ -452,10 +465,6 @@ jobs:
             # Install yq
             if ! command -v yq >/dev/null 2>&1; then
               echo "yq not exists"
-              if ! command -v wget >/dev/null 2>&1; then
-                echo "wget not exists"
-                sudo apt install -y wget
-              fi
               wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_arm64 -O /usr/bin/yq &&\
               chmod +x /usr/bin/yq
             fi
