--- a/.github/workflows/test-windows-tools.yml
+++ b/.github/workflows/test-windows-tools.yml
@@ -16,6 +16,21 @@ jobs:
           cd 'C:\Program Files (x86)\Microsoft SDKs\ClickOnce\SignTool'
           ls -R
 
+  msvc:
+    name: Create msvc
+    runs-on: windows-latest
+    steps:
+      - name: Check msvc
+        run: |
+          cd 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC'
+          ls
+
+          cd 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC\14.40.33810\x64'
+          ls
+
+          cd 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC\14.40.33810\x64\Microsoft.VC143.CRT'
+          ls
+
 #  msix:
 #    name: Create msix
 #    runs-on: windows-latest
