fix: update GitHub Actions

--- a/.github/workflows/test-windows-tools.yml
+++ b/.github/workflows/test-windows-tools.yml
@@ -22,14 +22,15 @@ jobs:
     steps:
       - name: Check msvc
         run: |
-          cd 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC'
-          ls
+          $directories = Get-ChildItem -Path "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC" -Directory | Where-Object { $_.Name -match '^[0-9]{1,}' }
 
-          cd 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC\14.40.33810\x64'
-          ls
-
-          cd 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC\14.40.33810\x64\Microsoft.VC143.CRT'
-          ls
+          # 如果目录列表不为空，则找到最后一个目录
+          if ($directories.Count -gt 0) {
+              $lastDirectory = $directories[-1]
+              Write-Output "最后一个以数字开头的目录是: $($lastDirectory.FullName)"
+          } else {
+              Write-Output "未找到以数字开头的目录"
+          }
 
 #  msix:
 #    name: Create msix
