--- a/.github/workflows/test-windows-msi.yml
+++ b/.github/workflows/test-windows-msi.yml
@@ -124,14 +124,14 @@ jobs:
         run: |
           $env:FLUTTER_BUILD_OUTPUT_DIR = "$pwd\build\windows\x64\runner\Release"
           $env:VISUAL_STUDIO_REDIST_DIR = "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\VC\Redist\MSVC\14.40.33807\x64\Microsoft.VC143.CRT"
-          dotnet build .\msi\PicGuard\PicGuard.wixproj --arch x64 --configuration Release
+          dotnet build .\msi\picguard\picguard.wixproj --arch x64 --configuration Release
 
       # Package the build.
       - name: Copy build for msi
         shell: pwsh
         run: |
-          Rename-Item -Path "$pwd\msi\PicGuard\bin\Release\en-US\PicGuard.msi" -NewName "PicGuard_$env:VERSION`_windows_x64_en-US.msi"
-          Rename-Item -Path "$pwd\msi\PicGuard\bin\Release\zh-CN\PicGuard.msi" -NewName "PicGuard_$env:VERSION`_windows_x64_zh-CN.msi"
+          Rename-Item -Path "$pwd\msi\picguard\bin\Release\en-US\picguard.msi" -NewName "picguard_$env:VERSION`_windows_x64_en-US.msi"
+          Rename-Item -Path "$pwd\msi\picguard\bin\Release\zh-CN\picguard.msi" -NewName "picguard_$env:VERSION`_windows_x64_zh-CN.msi"
         env:
           VERSION: ${{ needs.get_version.outputs.version }}
 
@@ -139,7 +139,7 @@ jobs:
         with:
           name: windows-msi-artifact
           path: |
-            .\msi\PicGuard\bin\Release\*\*.msi
+            .\msi\picguard\bin\Release\*\*.msi
 
       - name: Clean up
         if: ${{ always() }}
